VERY basic FLTK UI.
git-svn-id: svn://svn.code.sf.net/p/directnet/code/trunk/directnet@110 40aaf297-f90e-0410-8da6-8adc2782f1e2

--- a/configure.ac
+++ b/configure.ac
@@ -77,7 +77,7 @@ fi
 
 if test "x$ui" = "xfltk" || ( test "x$ui" = "xdetermine" && test "x$found_ui" = "xno" )
 then
-        AM_PATH_FLTK(1.1, fltk=1)
+        AMX_PATH_FLTK([1.1], [fltk=1])
 
         if test "x$fltk" != x1
         then
