--- a/Makefile.in
+++ b/Makefile.in
@@ -43,7 +43,7 @@ DIST_COMMON = README $(am__configure_deps) $(srcdir)/Makefile.am \
 subdir = .
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 am__aclocal_m4_deps = $(top_srcdir)/macros/curses.m4 \
-	$(top_srcdir)/macros/pthread.m4 \
+	$(top_srcdir)/macros/fltk.m4 $(top_srcdir)/macros/pthread.m4 \
 	$(top_srcdir)/macros/readline.m4 $(top_srcdir)/macros/wxwin.m4 \
 	$(top_srcdir)/configure.ac
 am__configure_deps = $(am__aclocal_m4_deps) $(CONFIGURE_DEPENDENCIES) \
@@ -107,6 +107,9 @@ ENC_DIR = @ENC_DIR@
 ENC_LDFLAGS = @ENC_LDFLAGS@
 ENC_LIBS = @ENC_LIBS@
 EXEEXT = @EXEEXT@
+FLTK_CFLAGS = @FLTK_CFLAGS@
+FLTK_CONFIG = @FLTK_CONFIG@
+FLTK_LIBS = @FLTK_LIBS@
 INSTALL_DATA = @INSTALL_DATA@
 INSTALL_PROGRAM = @INSTALL_PROGRAM@
 INSTALL_SCRIPT = @INSTALL_SCRIPT@
