--- a/directnet/src/ui-fltk/Makefile.am
+++ b/directnet/src/ui-fltk/Makefile.am
@@ -2,5 +2,6 @@ AM_CXXFLAGS=@UI_CFLAGS@ -I..
 AM_LDFLAGS=@UI_LDFLAGS@
 
 noinst_LIBRARIES=libui.a
-libui_a_SOURCES=ui.cc \
-ui_fl.cc
+libui_a_SOURCES=BuddyWindow.cc \
+ui.cc
+
