--- a/directnet/src/Makefile.am
+++ b/directnet/src/Makefile.am
@@ -1,10 +1,14 @@
-SUBDIRS = @UI_DIR@ @ENC_DIR@
+SUBDIRS = @UI_DIR@ @HUB_DIR@ @ENC_DIR@
 
 CC=@PTHREAD_CC@
 
 if UI_CXX
 
+if MAKE_HUB
+bin_PROGRAMS=directnet directnethub
+else
 bin_PROGRAMS=directnet
+endif
 
 directnet_SOURCES=client.c \
 connection.c \
@@ -22,7 +26,11 @@ directnet_LDADD=@PTHREAD_CFLAGS@ @PTHREAD_LIBS@ @UI_DIR@/libui.a @ENC_DIR@/liben
 
 else
 
+if MAKE_HUB
+bin_PROGRAMS=directnetd directnethub
+else
 bin_PROGRAMS=directnetd
+endif
 
 directnetd_SOURCES=client.c \
 connection.c \
@@ -35,5 +43,22 @@ directnetd_CFLAGS=@PTHREAD_CFLAGS@ @UI_CFLAGS@ @ENC_CFLAGS@
 directnetd_LDFLAGS=@PTHREAD_CFLAGS@ @UI_LDFLAGS@ @ENC_LDFLAGS@
 directnetd_DEPENDENCIES=@UI_DIR@/libui.a @ENC_DIR@/libenc.a
 directnetd_LDADD=@PTHREAD_LIBS@ @UI_DIR@/libui.a @ENC_DIR@/libenc.a @UI_LIBS@ @ENC_LIBS@
+
+endif
+
+
+if MAKE_HUB
+
+directnethub_SOURCES=client.c \
+connection.c \
+directnet.c \
+hash.c \
+lock.c \
+server.c
+
+directnethub_CFLAGS=@PTHREAD_CFLAGS@ @ENC_CFLAGS@
+directnethub_LDFLAGS=@PTHREAD_CFLAGS@ @ENC_LDFLAGS@
+directnethub_DEPENDENCIES=@HUB_DIR@/libhub.a @ENC_DIR@/libenc.a
+directnethub_LDADD=@PTHREAD_LIBS@ @HUB_DIR@/libhub.a @ENC_DIR@/libenc.a @ENC_LIBS@
 
 endif
