--- a/directnet/src/hub/Makefile.in
+++ b/directnet/src/hub/Makefile.in
@@ -14,7 +14,7 @@
 
 @SET_MAKE@
 
-SOURCES = $(libenc_a_SOURCES)
+SOURCES = $(libhub_a_SOURCES)
 
 srcdir = @srcdir@
 top_srcdir = @top_srcdir@
@@ -38,7 +38,7 @@ PRE_UNINSTALL = :
 POST_UNINSTALL = :
 build_triplet = @build@
 host_triplet = @host@
-subdir = src/enc-gpg
+subdir = src/hub
 DIST_COMMON = $(srcdir)/Makefile.am $(srcdir)/Makefile.in
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 am__aclocal_m4_deps = $(top_srcdir)/macros/curses.m4 \
@@ -53,10 +53,10 @@ CONFIG_CLEAN_FILES =
 LIBRARIES = $(noinst_LIBRARIES)
 AR = ar
 ARFLAGS = cru
-libenc_a_AR = $(AR) $(ARFLAGS)
-libenc_a_LIBADD =
-am_libenc_a_OBJECTS = gpg.$(OBJEXT)
-libenc_a_OBJECTS = $(am_libenc_a_OBJECTS)
+libhub_a_AR = $(AR) $(ARFLAGS)
+libhub_a_LIBADD =
+am_libhub_a_OBJECTS = libhub_a-hub.$(OBJEXT)
+libhub_a_OBJECTS = $(am_libhub_a_OBJECTS)
 DEFAULT_INCLUDES = -I. -I$(srcdir) -I$(top_builddir)
 depcomp = $(SHELL) $(top_srcdir)/scripts/depcomp
 am__depfiles_maybe = depfiles
@@ -64,8 +64,8 @@ COMPILE = $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) \
 	$(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS)
 CCLD = $(CC)
 LINK = $(CCLD) $(AM_CFLAGS) $(CFLAGS) $(AM_LDFLAGS) $(LDFLAGS) -o $@
-SOURCES = $(libenc_a_SOURCES)
-DIST_SOURCES = $(libenc_a_SOURCES)
+SOURCES = $(libhub_a_SOURCES)
+DIST_SOURCES = $(libhub_a_SOURCES)
 ETAGS = etags
 CTAGS = ctags
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
@@ -194,10 +194,9 @@ sbindir = @sbindir@
 sharedstatedir = @sharedstatedir@
 sysconfdir = @sysconfdir@
 target_alias = @target_alias@
-AM_CFLAGS = @ENC_CFLAGS@ -I..
-AM_LDFLAGS = @ENC_LDFLAGS@
-noinst_LIBRARIES = libenc.a
-libenc_a_SOURCES = gpg.c
+noinst_LIBRARIES = libhub.a
+libhub_a_SOURCES = hub.c
+libhub_a_CFLAGS = -I.. -DHUB_NAME=\"@HUB_NAME@\"
 all: all-am
 
 .SUFFIXES:
@@ -211,9 +210,9 @@ $(srcdir)/Makefile.in:  $(srcdir)/Makefile.am  $(am__configure_deps)
 	      exit 1;; \
 	  esac; \
 	done; \
-	echo ' cd $(top_srcdir) && $(AUTOMAKE) --gnu  src/enc-gpg/Makefile'; \
+	echo ' cd $(top_srcdir) && $(AUTOMAKE) --gnu  src/hub/Makefile'; \
 	cd $(top_srcdir) && \
-	  $(AUTOMAKE) --gnu  src/enc-gpg/Makefile
+	  $(AUTOMAKE) --gnu  src/hub/Makefile
 .PRECIOUS: Makefile
 Makefile: $(srcdir)/Makefile.in $(top_builddir)/config.status
 	@case '$?' in \
@@ -234,10 +233,10 @@ $(ACLOCAL_M4):  $(am__aclocal_m4_deps)
 
 clean-noinstLIBRARIES:
 	-test -z "$(noinst_LIBRARIES)" || rm -f $(noinst_LIBRARIES)
-libenc.a: $(libenc_a_OBJECTS) $(libenc_a_DEPENDENCIES) 
-	-rm -f libenc.a
-	$(libenc_a_AR) libenc.a $(libenc_a_OBJECTS) $(libenc_a_LIBADD)
-	$(RANLIB) libenc.a
+libhub.a: $(libhub_a_OBJECTS) $(libhub_a_DEPENDENCIES) 
+	-rm -f libhub.a
+	$(libhub_a_AR) libhub.a $(libhub_a_OBJECTS) $(libhub_a_LIBADD)
+	$(RANLIB) libhub.a
 
 mostlyclean-compile:
 	-rm -f *.$(OBJEXT)
@@ -245,7 +244,7 @@ mostlyclean-compile:
 distclean-compile:
 	-rm -f *.tab.c
 
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/gpg.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libhub_a-hub.Po@am__quote@
 
 .c.o:
 @am__fastdepCC_TRUE@	if $(COMPILE) -MT $@ -MD -MP -MF "$(DEPDIR)/$*.Tpo" -c -o $@ $<; \
@@ -260,6 +259,20 @@ distclean-compile:
 @AMDEP_TRUE@@am__fastdepCC_FALSE@	source='$<' object='$@' libtool=no @AMDEPBACKSLASH@
 @AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCC_FALSE@	$(COMPILE) -c `$(CYGPATH_W) '$<'`
+
+libhub_a-hub.o: hub.c
+@am__fastdepCC_TRUE@	if $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(libhub_a_CFLAGS) $(CFLAGS) -MT libhub_a-hub.o -MD -MP -MF "$(DEPDIR)/libhub_a-hub.Tpo" -c -o libhub_a-hub.o `test -f 'hub.c' || echo '$(srcdir)/'`hub.c; \
+@am__fastdepCC_TRUE@	then mv -f "$(DEPDIR)/libhub_a-hub.Tpo" "$(DEPDIR)/libhub_a-hub.Po"; else rm -f "$(DEPDIR)/libhub_a-hub.Tpo"; exit 1; fi
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	source='hub.c' object='libhub_a-hub.o' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCC_FALSE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(libhub_a_CFLAGS) $(CFLAGS) -c -o libhub_a-hub.o `test -f 'hub.c' || echo '$(srcdir)/'`hub.c
+
+libhub_a-hub.obj: hub.c
+@am__fastdepCC_TRUE@	if $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(libhub_a_CFLAGS) $(CFLAGS) -MT libhub_a-hub.obj -MD -MP -MF "$(DEPDIR)/libhub_a-hub.Tpo" -c -o libhub_a-hub.obj `if test -f 'hub.c'; then $(CYGPATH_W) 'hub.c'; else $(CYGPATH_W) '$(srcdir)/hub.c'; fi`; \
+@am__fastdepCC_TRUE@	then mv -f "$(DEPDIR)/libhub_a-hub.Tpo" "$(DEPDIR)/libhub_a-hub.Po"; else rm -f "$(DEPDIR)/libhub_a-hub.Tpo"; exit 1; fi
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	source='hub.c' object='libhub_a-hub.obj' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCC_FALSE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(libhub_a_CFLAGS) $(CFLAGS) -c -o libhub_a-hub.obj `if test -f 'hub.c'; then $(CYGPATH_W) 'hub.c'; else $(CYGPATH_W) '$(srcdir)/hub.c'; fi`
 uninstall-info-am:
 
 ID: $(HEADERS) $(SOURCES) $(LISP) $(TAGS_FILES)
