--- a/directnet/src/ui-wx/Makefile.in
+++ b/directnet/src/ui-wx/Makefile.in
@@ -105,6 +105,8 @@ EXEEXT = @EXEEXT@
 FLTK_CFLAGS = @FLTK_CFLAGS@
 FLTK_CONFIG = @FLTK_CONFIG@
 FLTK_LIBS = @FLTK_LIBS@
+HUB_DIR = @HUB_DIR@
+HUB_NAME = @HUB_NAME@
 INSTALL_DATA = @INSTALL_DATA@
 INSTALL_PROGRAM = @INSTALL_PROGRAM@
 INSTALL_SCRIPT = @INSTALL_SCRIPT@
@@ -114,6 +116,8 @@ LIBOBJS = @LIBOBJS@
 LIBS = @LIBS@
 LTLIBOBJS = @LTLIBOBJS@
 MAKEINFO = @MAKEINFO@
+MAKE_HUB_FALSE = @MAKE_HUB_FALSE@
+MAKE_HUB_TRUE = @MAKE_HUB_TRUE@
 OBJEXT = @OBJEXT@
 PACKAGE = @PACKAGE@
 PACKAGE_BUGREPORT = @PACKAGE_BUGREPORT@
