Tpyo in configure.ac
git-svn-id: svn://svn.code.sf.net/p/directnet/code/trunk/directnet@138 40aaf297-f90e-0410-8da6-8adc2782f1e2

--- a/configure.ac
+++ b/configure.ac
@@ -213,7 +213,7 @@ fi
 
 AC_SUBST(HUB_NAME)
 AC_SUBST(HUB_DIR)
-AM_CONDITIONAL(MAKE_HUB, test "x$hub" != "xno")
+AM_CONDITIONAL(MAKE_HUB, test "x$HUB_NAME" != "xno")
 
 
 # Check for encryption to use
