Better chat function.
git-svn-id: svn://svn.code.sf.net/p/directnet/code/trunk@149 40aaf297-f90e-0410-8da6-8adc2782f1e2

--- a/directnet/src/Makefile.am
+++ b/directnet/src/Makefile.am
@@ -10,7 +10,8 @@ else
 bin_PROGRAMS=directnet
 endif
 
-directnet_SOURCES=client.c \
+directnet_SOURCES=chat.c \
+client.c \
 connection.c \
 directnet.c \
 hash.c \
@@ -32,7 +33,8 @@ else
 bin_PROGRAMS=directnetd
 endif
 
-directnetd_SOURCES=client.c \
+directnetd_SOURCES=chat.c \
+client.c \
 connection.c \
 directnet.c \
 hash.c \
@@ -49,7 +51,8 @@ endif
 
 if MAKE_HUB
 
-directnethub_SOURCES=client.c \
+directnethub_SOURCES=chat.c \
+client.c \
 connection.c \
 directnet.c \
 hash.c \
