--- a/Makefile.am
+++ b/Makefile.am
@@ -1,3 +1,8 @@
 SUBDIRS=src
 
-EXTRA_DIST=acsite.m4
+EXTRA_DIST=acsite.m4 \
+directnet.desktop
+
+appsdir=$(datadir)/applications
+apps_DATA=directnet.desktop
+
