--- a/directnet/src/ui-fltk/Makefile.am
+++ b/directnet/src/ui-fltk/Makefile.am
@@ -2,7 +2,8 @@ AM_CXXFLAGS=@UI_CFLAGS@ -I..
 AM_LDFLAGS=@UI_LDFLAGS@
 
 noinst_LIBRARIES=libui.a
-libui_a_SOURCES=BuddyWindow.cc \
+libui_a_SOURCES=AwayWindow.cc \
+BuddyWindow.cc \
 ChatWindow.cc \
 NameWindow.cc \
 ui.cc
