Moved gaim-plugin into it's own dir.
git-svn-id: svn://svn.code.sf.net/p/directnet/code/trunk/directnet@178 40aaf297-f90e-0410-8da6-8adc2782f1e2

--- a/configure.ac
+++ b/configure.ac
@@ -14,6 +14,7 @@ Makefile
 src/Makefile
 src/enc-fake/Makefile
 src/enc-gpg/Makefile
+src/gaim-plugin/Makefile
 src/hub/Makefile
 src/ui-curses/Makefile
 src/ui-dumb/Makefile
