Proper CFLAGS for gaim-plugin.
git-svn-id: svn://svn.code.sf.net/p/directnet/code/trunk@184 40aaf297-f90e-0410-8da6-8adc2782f1e2

--- a/directnet/src/gaim-plugin/Makefile.am
+++ b/directnet/src/gaim-plugin/Makefile.am
@@ -1,3 +1,3 @@
 noinst_LIBRARIES=libgaim_plugin.a
 libgaim_plugin_a_SOURCES=gaim-plugin.c
-libgaim_plugin_a_CFLAGS=@GAIM_CFLAGS@ -I.. -DHUB_NAME=\"@HUB_NAME@\"
+libgaim_plugin_a_CFLAGS=@GAIM_CFLAGS@ -I.. -DGAIM_PLUGIN -DGAIM_PLUGINS
