Fully working MingW build (without breaking at least i686-pc-linux-gnu)
git-svn-id: svn://svn.code.sf.net/p/directnet/code/trunk/directnet@186 40aaf297-f90e-0410-8da6-8adc2782f1e2

--- a/config.h.in
+++ b/config.h.in
@@ -42,9 +42,8 @@
 /* Define to 1 if you have the `socket' library (-lsocket). */
 #undef HAVE_LIBSOCKET
 
-/* Define to 1 if your system has a GNU libc compatible `malloc' function, and
-   to 0 otherwise. */
-#undef HAVE_MALLOC
+/* Define to 1 if you have the `wsock32' library (-lwsock32). */
+#undef HAVE_LIBWSOCK32
 
 /* Define to 1 if you have the <memory.h> header file. */
 #undef HAVE_MEMORY_H
@@ -160,9 +159,6 @@
 
 /* Version number of package */
 #undef VERSION
-
-/* Define to rpl_malloc if the replacement function should be used. */
-#undef malloc
 
 /* Define to `int' if <sys/types.h> does not define. */
 #undef pid_t
